# rank_commitments

./: .gitignore  CMakeLists.txt  README.md
src/hamming/: hamming_parameters.h
src/hamming/jain_commitment/: CMakeLists.txt  jain_commitment.cpp  jain_commitment.h
src/hamming/knowledge_of_valid_opening/: CMakeLists.txt  knowledge_of_valid_opening.cpp  knowledge_of_valid_opening.h
src/hamming/linear_relations/: CMakeLists.txt  linear_relations.cpp  linear_relations.h
src/hamming/multiplicative_relations/: CMakeLists.txt  multiplicative_relations.cpp  multiplicative_relations.h
src/rank/: rank_params.h
src/rank/knowledge_of_valid_opening/: CMakeLists.txt  knowledge_of_valid_opening.cpp  knowledge_of_valid_opening.h
src/rank/linear_relations/: CMakeLists.txt  linear_relations.cpp  linear_relations.h
src/rank/multiplicative_relations/: CMakeLists.txt  multiplicative_relations.cpp  multiplicative_relations.h
src/rank/rank_commitment/: CMakeLists.txt  rank_commitment.cpp  rank_commitment.h
src/test/: CMakeLists.txt  main.cpp  test_functions.cpp  test_functions.h  test_jain_commitments.cpp  test_jain_commitments.h  test_knowledge_of_valid_opening.cpp  test_knowledge_of_valid_opening.h  test_linear_relations.cpp  test_linear_relations.h  test_multiplicative_relations.cpp  test_multiplicative_relations.h  test_params.h  test_rank_commitment.cpp  test_rank_commitment.h  test_rank_knowledge_of_valid_opening.cpp  test_rank_knowledge_of_valid_opening.h  test_rank_linear_relations.cpp  test_rank_linear_relations.h  test_rank_multiplicative_relations.cpp  test_rank_multiplicative_relations.h  test_utils.cpp  test_utils.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
